code of conduct

--- a/README.Rmd
+++ b/README.Rmd
@@ -171,5 +171,7 @@ unlink("hf205.json")
 ```
 
 
+----
 
+Please note that the `emld` project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
 
