Use eml_version() to set version
This approach allows us to have a single point that needs to be changed to reset the default version of EML for the package, instead of needing to change the fallback value in `getOption` everywhere it occurs!

This also puts the default back to the current 2.1.1 while 2.2.0 is still officially not yet released.

--- a/README.Rmd
+++ b/README.Rmd
@@ -129,8 +129,8 @@ f <- system.file("extdata/hf205.xml", package="emld")
 as_emld(f) %>%
   as_json("hf205.json")
 
-sparql <- 
-  'PREFIX eml: <eml://ecoinformatics.org/eml-2.2.0/>
+prefix <- paste0("PREFIX eml: <eml://ecoinformatics.org/", eml_version(), "/>\n")
+sparql <- paste0(prefix, '
 
   SELECT ?genus ?species ?northLat ?southLat ?eastLong ?westLong 
 
@@ -145,7 +145,7 @@ sparql <-
     ?x eml:eastBoundingCoordinate ?eastLong .
     ?x eml:westBoundingCoordinate ?westLong .
   }
-'
+')
   
 rdf <- rdf_parse("hf205.json", "jsonld")
 df <- rdf_query(rdf, sparql)
