--- a/README.Rmd
+++ b/README.Rmd
@@ -3,9 +3,9 @@ output: github_document
 ---
 
 [![lifecycle](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
-[![Travis-CI Build Status](https://travis-ci.org/cboettig/emld.svg?branch=master)](https://travis-ci.org/cboettig/emld) 
+[![Travis-CI Build Status](https://travis-ci.org/ropensci/emld.svg?branch=master)](https://travis-ci.org/ropensci/emld) 
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/cboettig/emld?branch=master&svg=true)](https://ci.appveyor.com/project/cboettig/emld)
-[![Coverage Status](https://img.shields.io/codecov/c/github/cboettig/emld/master.svg)](https://codecov.io/github/cboettig/emld?branch=master)
+[![Coverage Status](https://img.shields.io/codecov/c/github/ropensci/emld/master.svg)](https://codecov.io/github/ropensci/emld?branch=master)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/emld)](https://cran.r-project.org/package=emld)
 [![](https://badges.ropensci.org/269_status.svg)](https://github.com/ropensci/software-review/issues/269)
 
@@ -34,7 +34,7 @@ You can install emld from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
-devtools::install_github("cboettig/emld")
+devtools::install_github("ropensci/emld")
 ```
 
 
@@ -113,7 +113,7 @@ as_emld(hf205) %>%
   fromJSON()
 ```
 
-Nice features of JQ include the ability to do recursive descent (common to XPATH but not possible in `purrr`) and specify the shape of the return object.  Some prototype examples of how we can use this to translate between EML and <http://schema.org/Dataset> representations of the same metadata can be found in <https://github.com/cboettig/emld/blob/master/notebook/jq_maps.md>
+Nice features of JQ include the ability to do recursive descent (common to XPATH but not possible in `purrr`) and specify the shape of the return object.  Some prototype examples of how we can use this to translate between EML and <http://schema.org/Dataset> representations of the same metadata can be found in <https://github.com/ropensci/emld/blob/master/notebook/jq_maps.md>
 
 
 
@@ -162,6 +162,7 @@ unlink("eml.xml")
 unlink("test.xml")
 unlink("ex.xml")
 unlink("hf205.json")
+codemetar::write_codemeta()
 ```
 
 
@@ -169,3 +170,5 @@ unlink("hf205.json")
 
 Please note that the `emld` project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
 
+
+[![ropensci_footer](https://ropensci.org/public_images/ropensci_footer.png)](https://ropensci.org)
