--- a/README.Rmd
+++ b/README.Rmd
@@ -162,14 +162,9 @@ df
 
 
 
-```{r include=FALSE}
-codemetar::write_codemeta()
-```
-
-
 ----
 
-Please note that the `emld` project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
+Please note that the `emld` project is released with a [Contributor Code of Conduct](https://docs.ropensci.org/emld/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
 
 
 [![ropensci_footer](https://ropensci.org/public_images/ropensci_footer.png)](https://ropensci.org)
