--- a/README.Rmd
+++ b/README.Rmd
@@ -2,10 +2,10 @@
 output: github_document
 ---
 
-[![lifecycle](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
-[![Travis-CI Build Status](https://travis-ci.org/ropensci/emld.svg?branch=master)](https://travis-ci.org/ropensci/emld) 
+[![lifecycle](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![Travis-CI Build Status](https://app.travis-ci.com/ropensci/emld.svg?branch=master)](https://app.travis-ci.com/ropensci/emld) 
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/cboettig/emld?branch=master&svg=true)](https://ci.appveyor.com/project/cboettig/emld)
-[![Coverage Status](https://img.shields.io/codecov/c/github/ropensci/emld/master.svg)](https://codecov.io/github/ropensci/emld?branch=master)
+[![Coverage Status](https://img.shields.io/codecov/c/github/ropensci/emld/master.svg)](https://app.codecov.io/github/ropensci/emld?branch=master)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/emld)](https://cran.r-project.org/package=emld)
 [![](https://badges.ropensci.org/269_status.svg)](https://github.com/ropensci/software-review/issues/269)
 [![DOI](https://zenodo.org/badge/108223439.svg)](https://zenodo.org/badge/latestdoi/108223439)
